@@ -438,90 +438,6 @@ AC_DEFUN([AM_PATH_GDLIBCONFIG],
 ])
 
 dnl --------------------------------------------------------------------------
-dnl Check for crypto++ library
-dnl --------------------------------------------------------------------------
-dnl
-dnl This macro sets four variables
-dnl - CRYPTO_PP_STYLE
-dnl - CRYPTO_PP_HEADER_PATH
-dnl - CRYPTO_PP_VERSION_STRING
-dnl - CRYPTO_PP_VERSION_NUMBER
-dnl
-AC_DEFUN([CHECK_CRYPTO], [
-
-min_crypto_version=ifelse([$1], ,5.1,$1)
-AC_MSG_CHECKING([for crypto++ version >= $min_crypto_version])
-
-CRYPTO_PP_STYLE="unknown"
-CRYPTO_PP_HEADER_PATH=
-#
-# We don't use AC_CHECK_FILE to avoid caching.
-#
-
-#
-# Set crypto_prefix if the user has not set it in the configure command line
-#
-if test x$crypto_prefix = x ; then
-	crypto_prefix="/usr"
-fi
-AC_SUBST(crypto_prefix)
-
-#
-# Find the Crypto++ header
-#
-if test -f $crypto_prefix/cryptopp/cryptlib.h; then
-	CRYPTO_PP_STYLE="sources"
-	CRYPTO_PP_HEADER_PATH="$crypto_prefix/cryptopp/cryptlib.h"
-fi
-if test -f $crypto_prefix/include/cryptopp/cryptlib.h; then
-	CRYPTO_PP_STYLE="mdk_suse_fc"
-	CRYPTO_PP_HEADER_PATH="$crypto_prefix/include/cryptopp/cryptlib.h"
-fi
-if test -f $crypto_prefix/include/crypto++/cryptlib.h; then
-	CRYPTO_PP_STYLE="gentoo_debian"
-	CRYPTO_PP_HEADER_PATH="$crypto_prefix/include/crypto++/cryptlib.h"
-fi
-if test -z $CRYPTO_PP_STYLE; then
-	#
-	# If the execution reaches here, we have failed.
-	#
-	:
-fi
-
-CRYPTO_PP_VERSION_STRING=$(grep "Reference Manual" $CRYPTO_PP_HEADER_PATH | \
-	sed -e's#.*\s\(\([0-9]\+\.\?\)\+\)\s.*#\1#g')
-
-CRYPTO_PP_VERSION_NUMBER=$(echo $CRYPTO_PP_VERSION_STRING | \
-	$AWK 'BEGIN { FS = "."; } { printf "%d", ([$]1 * 1000 + [$]2) * 1000 + [$]3;}')
-
-minvers=$(echo $min_crypto_version | \
-	$AWK 'BEGIN { FS = "."; } { printf "%d", ([$]1 * 1000 + [$]2) * 1000 + [$]3;}')
-
-if test -n "$CRYPTO_PP_VERSION_NUMBER" && test "$CRYPTO_PP_VERSION_NUMBER" -ge $minvers; then
-	result="yes (version $CRYPTO_PP_VERSION_STRING, $CRYPTO_PP_STYLE)"
-else
-	result="no"
-fi
-AC_MSG_RESULT($result)
-
-AC_SUBST(CRYPTO_PP_STYLE)
-AC_SUBST(CRYPTO_PP_HEADER_PATH)
-AC_SUBST(CRYPTO_PP_VERSION_STRING)
-AC_SUBST(CRYPTO_PP_VERSION_NUMBER)
-AC_MSG_NOTICE([Crypto++ version number is $CRYPTO_PP_VERSION_NUMBER])
-])
-
-AC_DEFUN([AM_OPTIONS_CRYPTO], [
-	AC_ARG_WITH(
-		[crypto-prefix],
-		[AS_HELP_STRING(
-			[--with-crypto-prefix=PREFIX],
-			[prefix where crypto++ is installed])],
-		[crypto_prefix="$withval"],
-		[crypto_prefix=""])
-])
-
-dnl --------------------------------------------------------------------------
 dnl CCache support
 dnl --------------------------------------------------------------------------
 
